# polonius

./: .cruft.json  .gitignore  Dockerfile  README.md  azure.yaml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json  docker-compose_dev.yml
.github/workflows/: tests.yml
docs/: azure-architecture.drawio
infra/: db.bicep  inference.json  main.bicep  main.parameters.json  web.bicep
infra/core/ai/: cognitiveservices.bicep
infra/core/gateway/: apim.bicep  openai-apim-api.bicep  policy.xml
samples/: api.http
src/: .dockerignore  .env.example  app.py  entrypoint.sh  pyproject.toml  requirements.txt
src/flaskapp/: __init__.py  db_operations.py  helpers.py  models.py  pages.py  routes.py  seeder.py  sk_helper.py  test.http  test_notes.py
src/flaskapp/config/: development.py  production.py
src/flaskapp/plugins/TriagePlugin/ISS/: skprompt.txt
src/flaskapp/plugins/TriagePlugin/Notes/: config.json  skprompt.txt
src/src_env/: pyvenv.cfg
src/templates/: base.html  index.html
src/tests/local/: conftest.py  test_pages.py  test_playwright.py
src/tests/smoke/: smoketests.py
